// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HearingTime Matches snapshot when enableZone is true 1`] = `
<DocumentFragment>
  <span
    data-css-1042gbc=""
  >
    <fieldset
      class="usa-fieldset-inputs cf-form-radio "
    >
      <legend
        class=""
      >
        <strong>
          <span>
            Hearing Time
          </span>
        </strong>
      </legend>
      <div
        class="cf-form-radio-options"
      >
        <div
          class="cf-form-radio-option"
        >
          <input
            id="hearingTime0_Invalid dateEastern Time (US & Canada)"
            name="hearingTime0"
            type="radio"
            value="Invalid dateEastern Time (US & Canada)"
          />
          <label
            class=""
            for="hearingTime0_Invalid dateEastern Time (US & Canada)"
          >
            Invalid dateEastern Time (US & Canada)
          </label>
        </div>
        <div
          class="cf-form-radio-option"
        >
          <input
            id="hearingTime0_Invalid dateEastern Time (US & Canada)"
            name="hearingTime0"
            type="radio"
            value="Invalid dateEastern Time (US & Canada)"
          />
          <label
            class=""
            for="hearingTime0_Invalid dateEastern Time (US & Canada)"
          >
            Invalid dateEastern Time (US & Canada)
          </label>
        </div>
        <div
          class="cf-form-radio-option"
        >
          <input
            checked=""
            id="hearingTime0_Other"
            name="hearingTime0"
            type="radio"
            value="Other"
          />
          <label
            class=""
            for="hearingTime0_Other"
          >
            Other
          </label>
        </div>
      </div>
    </fieldset>
  </span>
  <div
    class=""
  >
    <div
      class="cf-form-dropdown dropdown-optionalHearingTime0"
    >
      <label
        class="question-label usa-sr-only"
        for="optional-hearing-time-0"
        id="optional-hearing-time-0-label"
      >
        <strong>
          <span>
            Hearing Time
          </span>
        </strong>
      </label>
      <div
        class="cf-select"
      >
        <div
          class=" css-2b097c-container"
        >
          <div
            class="cf-select__control css-yk16xz-control"
          >
            <div
              class="cf-select__value-container css-g1d714-ValueContainer"
            >
              <div
                class="cf-select__placeholder css-1wa3eu0-placeholder"
              >
                Select a time
              </div>
              <div
                class="css-81nyic-Input"
              >
                <div
                  class="cf-select__input"
                  style="display: inline-block;"
                >
                  <input
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-labelledby="optional-hearing-time-0-label"
                    aria-owns="optional-hearing-time-0-listbox"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="optional-hearing-time-0"
                    role="combobox"
                    spellcheck="false"
                    style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                  />
                </div>
              </div>
            </div>
            <div
              class="cf-select__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class="cf-select__indicator-separator css-1okebmr-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="cf-select__indicator cf-select__dropdown-indicator css-tlfecz-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-6q0nyr-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <input
            name="optionalHearingTime0"
            type="hidden"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HearingTime Matches snapshot when other time is not selected 1`] = `
<DocumentFragment>
  <span
    data-css-1042gbc=""
  >
    <fieldset
      class="usa-fieldset-inputs cf-form-radio "
    >
      <legend
        class=""
      >
        <strong>
          <span>
            Hearing Time
          </span>
        </strong>
      </legend>
      <div
        class="cf-form-radio-options"
      >
        <div
          class="cf-form-radio-option"
        >
          <input
            id="hearingTime0_8:30 AM"
            name="hearingTime0"
            type="radio"
            value="8:30 AM"
          />
          <label
            class=""
            for="hearingTime0_8:30 AM"
          >
            8:30 AM
          </label>
        </div>
        <div
          class="cf-form-radio-option"
        >
          <input
            id="hearingTime0_12:30 PM"
            name="hearingTime0"
            type="radio"
            value="12:30 PM"
          />
          <label
            class=""
            for="hearingTime0_12:30 PM"
          >
            12:30 PM
          </label>
        </div>
        <div
          class="cf-form-radio-option"
        >
          <input
            checked=""
            id="hearingTime0_Other"
            name="hearingTime0"
            type="radio"
            value="Other"
          />
          <label
            class=""
            for="hearingTime0_Other"
          >
            Other
          </label>
        </div>
      </div>
    </fieldset>
  </span>
  <div
    class=""
  >
    <div
      class="cf-form-dropdown dropdown-optionalHearingTime0"
    >
      <label
        class="question-label usa-sr-only"
        for="optional-hearing-time-0"
        id="optional-hearing-time-0-label"
      >
        <strong>
          <span>
            Hearing Time
          </span>
        </strong>
      </label>
      <div
        class="cf-select"
      >
        <div
          class=" css-2b097c-container"
        >
          <div
            class="cf-select__control css-yk16xz-control"
          >
            <div
              class="cf-select__value-container css-g1d714-ValueContainer"
            >
              <div
                class="cf-select__placeholder css-1wa3eu0-placeholder"
              >
                Select a time
              </div>
              <div
                class="css-81nyic-Input"
              >
                <div
                  class="cf-select__input"
                  style="display: inline-block;"
                >
                  <input
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-labelledby="optional-hearing-time-0-label"
                    aria-owns="optional-hearing-time-0-listbox"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="optional-hearing-time-0"
                    role="combobox"
                    spellcheck="false"
                    style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                  />
                </div>
              </div>
            </div>
            <div
              class="cf-select__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class="cf-select__indicator-separator css-1okebmr-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="cf-select__indicator cf-select__dropdown-indicator css-tlfecz-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-6q0nyr-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <input
            name="optionalHearingTime0"
            type="hidden"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HearingTime Matches snapshot when other time is selected 1`] = `
<DocumentFragment>
  <span
    data-css-1042gbc=""
  >
    <fieldset
      class="usa-fieldset-inputs cf-form-radio "
    >
      <legend
        class=""
      >
        <strong>
          <span>
            Hearing Time
          </span>
        </strong>
      </legend>
      <div
        class="cf-form-radio-options"
      >
        <div
          class="cf-form-radio-option"
        >
          <input
            id="hearingTime0_8:30 AM"
            name="hearingTime0"
            type="radio"
            value="8:30 AM"
          />
          <label
            class=""
            for="hearingTime0_8:30 AM"
          >
            8:30 AM
          </label>
        </div>
        <div
          class="cf-form-radio-option"
        >
          <input
            id="hearingTime0_12:30 PM"
            name="hearingTime0"
            type="radio"
            value="12:30 PM"
          />
          <label
            class=""
            for="hearingTime0_12:30 PM"
          >
            12:30 PM
          </label>
        </div>
        <div
          class="cf-form-radio-option"
        >
          <input
            checked=""
            id="hearingTime0_Other"
            name="hearingTime0"
            type="radio"
            value="Other"
          />
          <label
            class=""
            for="hearingTime0_Other"
          >
            Other
          </label>
        </div>
      </div>
    </fieldset>
  </span>
  <div
    class=""
  >
    <div
      class="cf-form-dropdown dropdown-optionalHearingTime0"
    >
      <label
        class="question-label usa-sr-only"
        for="optional-hearing-time-0"
        id="optional-hearing-time-0-label"
      >
        <strong>
          <span>
            Hearing Time
          </span>
        </strong>
      </label>
      <div
        class="cf-select"
      >
        <div
          class=" css-2b097c-container"
        >
          <div
            class="cf-select__control css-yk16xz-control"
          >
            <div
              class="cf-select__value-container css-g1d714-ValueContainer"
            >
              <div
                class="cf-select__placeholder css-1wa3eu0-placeholder"
              >
                Select a time
              </div>
              <div
                class="css-81nyic-Input"
              >
                <div
                  class="cf-select__input"
                  style="display: inline-block;"
                >
                  <input
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-labelledby="optional-hearing-time-0-label"
                    aria-owns="optional-hearing-time-0-listbox"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="optional-hearing-time-0"
                    role="combobox"
                    spellcheck="false"
                    style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                  />
                </div>
              </div>
            </div>
            <div
              class="cf-select__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class="cf-select__indicator-separator css-1okebmr-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="cf-select__indicator cf-select__dropdown-indicator css-tlfecz-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-6q0nyr-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <input
            name="optionalHearingTime0"
            type="hidden"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HearingTime Matches snapshot when readonly prop is set 1`] = `
<DocumentFragment>
  <span
    data-css-1042gbc=""
  >
    <fieldset
      class="usa-fieldset-inputs cf-form-radio "
    >
      <legend
        class=""
      >
        <strong>
          <span>
            Hearing Time
          </span>
        </strong>
      </legend>
      <div
        class="cf-form-radio-options"
      >
        <div
          class="cf-form-radio-option"
        >
          <input
            disabled=""
            id="hearingTime0_8:30 AM"
            name="hearingTime0"
            type="radio"
            value="8:30 AM"
          />
          <label
            class="disabled"
            for="hearingTime0_8:30 AM"
          >
            8:30 AM
          </label>
        </div>
        <div
          class="cf-form-radio-option"
        >
          <input
            disabled=""
            id="hearingTime0_12:30 PM"
            name="hearingTime0"
            type="radio"
            value="12:30 PM"
          />
          <label
            class="disabled"
            for="hearingTime0_12:30 PM"
          >
            12:30 PM
          </label>
        </div>
        <div
          class="cf-form-radio-option"
        >
          <input
            checked=""
            disabled=""
            id="hearingTime0_Other"
            name="hearingTime0"
            type="radio"
            value="Other"
          />
          <label
            class="disabled"
            for="hearingTime0_Other"
          >
            Other
          </label>
        </div>
      </div>
    </fieldset>
  </span>
  <div
    class=""
  >
    <div
      class="cf-form-dropdown dropdown-optionalHearingTime0"
    >
      <label
        class="question-label usa-sr-only"
        for="optional-hearing-time-0"
        id="optional-hearing-time-0-label"
      >
        <strong>
          <span>
            Hearing Time
          </span>
        </strong>
      </label>
      <div
        class="cf-select"
      >
        <div
          class="cf-select--is-disabled css-14jk2my-container"
        >
          <div
            class="cf-select__control cf-select__control--is-disabled css-1fhf3k1-control"
          >
            <div
              class="cf-select__value-container css-g1d714-ValueContainer"
            >
              <div
                class="cf-select__placeholder css-1wa3eu0-placeholder"
              >
                Select a time
              </div>
              <input
                aria-autocomplete="list"
                class="css-62g3xt-dummyInput"
                disabled=""
                id="optional-hearing-time-0"
                readonly=""
                tabindex="0"
                value=""
              />
            </div>
            <div
              class="cf-select__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class="cf-select__indicator-separator css-109onse-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="cf-select__indicator cf-select__dropdown-indicator css-tlfecz-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-6q0nyr-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HearingTime Matches snapshot with default props when passed in 1`] = `
<DocumentFragment>
  <span
    data-css-1042gbc=""
  >
    <fieldset
      class="usa-fieldset-inputs cf-form-radio "
    >
      <legend
        class=""
      >
        <strong>
          <span>
            Hearing Time
          </span>
        </strong>
      </legend>
      <div
        class="cf-form-radio-options"
      >
        <div
          class="cf-form-radio-option"
        >
          <input
            id="hearingTime0_8:30 AM"
            name="hearingTime0"
            type="radio"
            value="8:30 AM"
          />
          <label
            class=""
            for="hearingTime0_8:30 AM"
          >
            8:30 AM
          </label>
        </div>
        <div
          class="cf-form-radio-option"
        >
          <input
            id="hearingTime0_12:30 PM"
            name="hearingTime0"
            type="radio"
            value="12:30 PM"
          />
          <label
            class=""
            for="hearingTime0_12:30 PM"
          >
            12:30 PM
          </label>
        </div>
        <div
          class="cf-form-radio-option"
        >
          <input
            checked=""
            id="hearingTime0_Other"
            name="hearingTime0"
            type="radio"
            value="Other"
          />
          <label
            class=""
            for="hearingTime0_Other"
          >
            Other
          </label>
        </div>
      </div>
    </fieldset>
  </span>
  <div
    class=""
  >
    <div
      class="cf-form-dropdown dropdown-optionalHearingTime0"
    >
      <label
        class="question-label usa-sr-only"
        for="optional-hearing-time-0"
        id="optional-hearing-time-0-label"
      >
        <strong>
          <span>
            Hearing Time
          </span>
        </strong>
      </label>
      <div
        class="cf-select"
      >
        <div
          class=" css-2b097c-container"
        >
          <div
            class="cf-select__control css-yk16xz-control"
          >
            <div
              class="cf-select__value-container css-g1d714-ValueContainer"
            >
              <div
                class="cf-select__placeholder css-1wa3eu0-placeholder"
              >
                Select a time
              </div>
              <div
                class="css-81nyic-Input"
              >
                <div
                  class="cf-select__input"
                  style="display: inline-block;"
                >
                  <input
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-labelledby="optional-hearing-time-0-label"
                    aria-owns="optional-hearing-time-0-listbox"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="optional-hearing-time-0"
                    role="combobox"
                    spellcheck="false"
                    style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                  />
                </div>
              </div>
            </div>
            <div
              class="cf-select__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class="cf-select__indicator-separator css-1okebmr-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="cf-select__indicator cf-select__dropdown-indicator css-tlfecz-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-6q0nyr-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <input
            name="optionalHearingTime0"
            type="hidden"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
